k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: python-app-sv
spec:
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 5000
  selector:
    app: python-app
